// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CategoryBreadcrumbs stories snapshot > DeepHierarchy story renders and matches snapshot 1`] = `
<div
  data-breadcrumbs-harness="true"
>
  <nav
    aria-label="Breadcrumb"
    class="mb-6"
  >
    <ol
      class="flex flex-wrap items-center text-sm"
    >
      <li
        class="flex items-center"
      >
        <a
          class="text-primary-600 hover:underline"
          data-discover="true"
          href="/category/root"
        >
          Home
        </a>
      </li>
      <li
        class="flex items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right mx-1 size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <a
          class="text-primary-600 hover:underline"
          data-discover="true"
          href="/category/mens"
        >
          Mens
        </a>
      </li>
      <li
        class="flex items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right mx-1 size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <a
          class="text-primary-600 hover:underline"
          data-discover="true"
          href="/category/mens-clothing"
        >
          Clothing
        </a>
      </li>
      <li
        class="flex items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right mx-1 size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <a
          class="text-primary-600 hover:underline"
          data-discover="true"
          href="/category/mens-clothing-tops"
        >
          Tops
        </a>
      </li>
      <li
        class="flex items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right mx-1 size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <a
          class="text-primary-600 hover:underline"
          data-discover="true"
          href="/category/mens-clothing-tops-shirts"
        >
          Shirts
        </a>
      </li>
      <li
        class="flex items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right mx-1 size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <a
          class="text-primary-600 hover:underline"
          data-discover="true"
          href="/category/mens-clothing-tops-shirts-casual"
        >
          Casual Shirts
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`CategoryBreadcrumbs stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  data-breadcrumbs-harness="true"
>
  <nav
    aria-label="Breadcrumb"
    class="mb-6"
  >
    <ol
      class="flex flex-wrap items-center text-sm"
    >
      <li
        class="flex items-center"
      >
        <a
          class="text-primary-600 hover:underline"
          data-discover="true"
          href="/category/mens"
        >
          Mens
        </a>
      </li>
      <li
        class="flex items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right mx-1 size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <a
          class="text-primary-600 hover:underline"
          data-discover="true"
          href="/category/mens-accessories"
        >
          Accessories
        </a>
      </li>
      <li
        class="flex items-center"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right mx-1 size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <a
          class="text-primary-600 hover:underline"
          data-discover="true"
          href="/category/mens-accessories-ties"
        >
          Ties
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`CategoryBreadcrumbs stories snapshot > SingleCategory story renders and matches snapshot 1`] = `
<div
  data-breadcrumbs-harness="true"
>
  <nav
    aria-label="Breadcrumb"
    class="mb-6"
  >
    <ol
      class="flex flex-wrap items-center text-sm"
    >
      <li
        class="flex items-center"
      >
        <a
          class="text-primary-600 hover:underline"
          data-discover="true"
          href="/category/root"
        >
          Home
        </a>
      </li>
    </ol>
  </nav>
</div>
`;
